--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^16.9.0",
     "react-ace": "^7.0.4",
     "react-dom": "^16.9.0",
+    "react-if": "^3.4.3",
+    "react-only-if": "^1.0.0",
     "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
