--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-jsonschema-form": "^1.6.5",
     "@types/react-router-dom": "^4.3.5",
+    "@types/recompose": "^0.30.7",
     "babel-plugin-relay": "^6.0.0",
     "graphql": "^14.5.7",
     "graphql.macro": "^1.4.2",
@@ -16,16 +18,21 @@
     "ifanrx-react-ueditor": "^2.3.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-ace": "^7.0.4",
+    "react-docgen-typescript": "^1.15.0",
     "react-dom": "^16.9.0",
     "react-if": "^3.4.3",
+    "react-jsonschema-form": "^1.8.0",
     "react-only-if": "^1.0.0",
     "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
+    "react-refetch": "^2.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "react-styleguidist": "^9.1.16",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
     "semantic-ui-react": "^0.88.1",
